@@ -1,0 +1,12 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:meta="http://namespaces.zope.org/meta">
+
+  <meta:directive
+      name="registerProfile"
+      namespace="http://namespaces.zope.org/genericsetup"
+      schema=".zcml.IRegisterProfileDirective"
+      handler=".zcml.registerProfile"
+      />
+
+</configure>
